classDiagram
    %% ========================================
    %% ABSTRACT BASE CLASSES
    %% ========================================
    
    class Renderable {
        <<abstract>>
        + display_helper
        + __init__(display_helper) <<create>>
        + render(renderer: Renderer)* <<abstract>>
    }

    class Item {
        <<abstract>>
        + count: int
        + __init__(count: int) <<create>>
        + use(): bool* <<abstract>>
        + add(count: int)
        + __str__(): str
        + __repr__(): str
    }

    class Food {
        <<abstract>>
        + count: int
        + add_step: int
        + __init__(count: int, add_step: int) <<create>>
        + use(): bool
        + __str__(): str
        + __repr__(): str
    }

    class Collectable {
        <<abstract>>
        + count: int
        + __init__(count: int) <<create>>
        + use(): bool
    }

    class PermanentItem {
        <<abstract>>
        + count: int
        + __init__(count: int) <<create>>
        + use(): bool
    }

    %% ========================================
    %% CORE GAME CLASSES
    %% ========================================

    class Game {
        + map: Map
        + player: Player
        + game_state: GameState
        + game_renderer: GameRenderer
        + input_handler: InputHandler
        + room_interaction_handler: RoomInteractionHandler
        + room_pool: List[Room]
        + selected_room_index: int
        + selected_direction: Optional[str]
        + pending_room_position: Optional[Position]
        + display_helper: DisplayHelper
        + __init__(display_helper) <<create>>
        + render(renderer: Renderer)
        + get_current_room(): Optional[Room]
        + check_win_condition(): bool
        + check_lose_condition(): bool
        + handle_keyboard_event(event)
        - _attempt_move()
        - _can_unlock_door(lock_level: int): bool
        - _start_room_selection()
        - _confirm_room_selection()
        - _initialize_door_locks(room: Room)
        - _has_path_to_victory(): bool
        - _restart_game()
    }

    class Map {
        + width: int
        + height: int
        + rooms: List[List[Optional[Room]]]
        + room_pool: List[Room]
        + used_room_names: set
        + room_loader: RoomLoader
        + display_helper
        + __init__(width: int, height: int, room_loader: Optional[RoomLoader], display_helper) <<create>>
        + generate_room_pool(count: int): List[Room]
        + place_room(room: Room, position: Position): bool
        + generate_map_progressive()
        + get_room(position: Position): Optional[Room]
    }

    class Room {
        + name: str
        + position: Position
        + asset_path: str
        + rarity_degree: int
        + has_top_door: bool
        + has_bottom_door: bool
        + has_left_door: bool
        + has_right_door: bool
        + lock_level: int
        + visited: bool
        + is_locked: bool
        + dug: bool
        + chest: Optional[Chest]
        + has_treasure: bool
        + is_target: bool
        + shop: bool
        + items: list
        + gem_cost: int
        + color: str
        + lock_level: int
        + special_effect: dict
        + placement_condition: str
        + __init__(name: str, position: Position, asset_path: str, rarity_degree: int, display_helper) <<create>>
        + from_dict(room_dict: dict, position: Position, display_helper): Room <<classmethod>>
        + render(renderer: Renderer, highlight: bool)
        + take_items(): List[Item]
        + unlock(key: Key): bool
        + __repr__(): str
        + __str__(): str
    }

    class Player {
        + position: Position
        + inventory: dict[InventoryKey, Item]
        + current_selected_item: Optional[Item]
        + __init__(position: Position) <<create>>
        + move_to(position: Position)
        + take_item(item: Item)
        + has_item(item_key: InventoryKey): bool
        + use_item(): bool
        + select_item(item_key: InventoryKey)
        + get_stats(): Dict[InventoryKey, Item]
        + __str__(): str
        + __repr__(): str
    }

    class Renderer {
        + screen: pygame.surface.Surface
        + __init__(screen: pygame.surface.Surface) <<create>>
        + display_text(text: str, color: Color, font_size: float, position: Position, police: str)
        + draw_image(asset_path: str, rect: Rectangle)
        + draw_rectangle(rect: Rectangle, fill_color: Optional[Color], stroke_color: Optional[Color], stroke_width: float)
        + flip()
    }

    %% ========================================
    %% UTILITY CLASSES
    %% ========================================

    class Position {
        + x: int
        + y: int
        + __init__(x: int, y: int) <<create>>
        + to_tuple(): tuple[int, int]
        + __str__(): str
        + __repr__(): str
    }

    class Rectangle {
        + x: float
        + y: float
        + width: float
        + height: float
        + __init__(x: float, y: float, width: float, height: float) <<create>>
        + __str__(): str
        + __repr__(): str
    }

    class Color {
        + red: int
        + green: int
        + blue: int
        + alpha: int
        + __init__(red: int, green: int, blue: int, alpha: int) <<create>>
        + to_tuple(): tuple[int, int, int, int]
        + to_rgb_tuple(): tuple[int, int, int]
        + __str__(): str
        + __repr__(): str
    }

    class Size {
        + width: float
        + height: float
        + __init__(width: float, height: float) <<create>>
        + to_tuple(): tuple[float, float]
        + __str__(): str
        + __repr__(): str
    }

    class DisplayHelper {
        + SCREEN_WIDTH: int
        + SCREEN_HEIGHT: int
        + ROOM_SIZE: int
        + MANOR_X: int
        + MANOR_WIDTH: int
        + ACTION_X: int
        + ACTION_WIDTH: int
        + FPS: int <<class attribute>>
        + GRID_MARGIN: int <<class attribute>>
        + GRID_MARGIN_TOP: int <<class attribute>>
        + ROOM_GAP: int <<class attribute>>
        + __init__(desktop_width: int, desktop_height: int) <<create>>
        + update_dimensions(width: int, height: int)
        + compute_min_size(): tuple[int, int]
    }

    class RoomLoader {
        + base_path: str
        + json_path: str
        + room_data: dict
        + __init__() <<create>>
        + get_room_info(room_name: str): dict
        + get_all_rooms(): dict
        + get_rooms_by_color(color: str): list
        + get_rooms_by_rarity(rarity: int): list
        + get_rooms_by_placement(placement_condition: str): list
        + get_available_room_names(exclude_names: list): list
        - _load_room_data()
    }

    class Chest {
        + is_opened: bool
        + contents: List[Item]
        + lock_level: int
        + __init__(contents: List[Item], lock_level: int) <<create>>
        + open_with_key(key: Key): bool
        + open_with_hammer(hammer: Hammer): bool
        + get_contents(): List[Item]
    }


    class Drawables {
        <<static>>
        + STEPS: str <<class attribute>>
        + COIN: str <<class attribute>>
        + GEM: str <<class attribute>>
        + KEY: str <<class attribute>>
        + DICE: str <<class attribute>>
        + SHOVEL: str <<class attribute>>
        + HAMMER: str <<class attribute>>
        + LOCK_PICK_KIT: str <<class attribute>>
        + METAL_DETECTOR: str <<class attribute>>
        + RABBIT_FOOT: str <<class attribute>>
    }

    %% ========================================
    %% HANDLER CLASSES (Separation of Concerns)
    %% ========================================

    class GameRenderer {
        + game: Game
        + __init__(game: Game) <<create>>
        + render(renderer: Renderer)
        - _draw_mansion(renderer: Renderer)
        - _draw_rooms(renderer: Renderer)
        - _draw_game_area(renderer: Renderer)
        - _draw_inventory(renderer: Renderer): int
        - _draw_room_selection(renderer: Renderer, inventory_end_y: int)
        - _draw_room_preview(renderer: Renderer, room: Room, rect: Rectangle, is_selected: bool)
        - _draw_game_status(renderer: Renderer)
        - _draw_direction_indicator(renderer: Renderer)
        - _draw_player_cursor(renderer: Renderer)
    }

    class InputHandler {
        + game: Game
        + __init__(game: Game) <<create>>
        + handle_keyboard_event(event)
        - _handle_movement_input(event)
        - _handle_room_selection_input(event)
        - _handle_room_interaction_input(event)
    }

    class RoomInteractionHandler {
        + game: Game
        + __init__(game: Game) <<create>>
        + check_room_interactions()
        + open_chest_with_key()
        + open_chest_with_hammer()
        + dig_with_shovel()
        - _collect_chest_contents(chest: Chest)
    }

    %% ========================================
    %% ENUMERATIONS
    %% ========================================

    class GameState {
        <<enumeration>>
        ENTER_ROOM
        CHOOSING_ROOM
        ROOM_INTERACTION
        GAME_OVER
        VICTORY
    }

    class InventoryKey {
        <<enumeration>>
        COIN
        DICE
        KEY
        GEM
        STEP
        SHOVEL
        METAL_DETECTOR
        HAMMER
        LOCK_PICK_KIT
        RABBIT_FOOT
    }

    %% ========================================
    %% ITEM HIERARCHY - COLLECTABLES
    %% ========================================

    class Step {
    }

    class Coin {
    }

    class Gem {
    }

    class Key {
    }

    class Dice {
    }

    %% ========================================
    %% ITEM HIERARCHY - PERMANENT TOOLS
    %% ========================================

    class Shovel {
    }

    class Hammer {
    }

    class MetalDetector {
    }

    class LockPickKit {
    }

    class RabbitFoot {
    }

    %% ========================================
    %% ITEM HIERARCHY - FOOD ITEMS
    %% ========================================

    class Apple {
        + add_step: int = 2 <<default>>
    }

    class Banana {
        + add_step: int = 3 <<default>>
    }

    class Cake {
        + add_step: int = 10 <<default>>
    }

    class Sandwich {
        + add_step: int = 15 <<default>>
    }

    class Meal {
        + add_step: int = 25 <<default>>
    }

    %% ========================================
    %% INHERITANCE RELATIONSHIPS
    %% ========================================

    Renderable <|-- Game
    Renderable <|-- Room

    Item <|-- Food
    Item <|-- Collectable
    Item <|-- PermanentItem

    Collectable <|-- Step
    Collectable <|-- Coin
    Collectable <|-- Gem
    Collectable <|-- Key
    Collectable <|-- Dice

    PermanentItem <|-- Shovel
    PermanentItem <|-- Hammer
    PermanentItem <|-- MetalDetector
    PermanentItem <|-- LockPickKit
    PermanentItem <|-- RabbitFoot

    Food <|-- Apple
    Food <|-- Banana
    Food <|-- Cake
    Food <|-- Sandwich
    Food <|-- Meal

    %% ========================================
    %% COMPOSITION RELATIONSHIPS (Strong ownership)
    %% ========================================

    Game *-- Map
    Game *-- Player
    Game *-- GameState
    Game *-- GameRenderer
    Game *-- InputHandler
    Game *-- RoomInteractionHandler
    Map *-- Room
    Map *-- RoomLoader
    Room *-- Position
    Room *-- Chest
    Player *-- Position
    Player *-- InventoryKey
    Chest *-- Item
    Room *-- Item

    %% ========================================
    %% DEPENDENCY RELATIONSHIPS (Uses)
    %% ========================================

    Game ..> Renderer : uses
    Game ..> DisplayHelper : uses
    Game ..> Drawables : uses
    GameRenderer ..> Game : uses
    GameRenderer ..> Renderer : uses
    GameRenderer ..> DisplayHelper : uses
    GameRenderer ..> Drawables : uses
    GameRenderer ..> Room : uses
    InputHandler ..> Game : uses
    RoomInteractionHandler ..> Game : uses
    RoomInteractionHandler ..> Chest : uses
    Room ..> Renderer : uses
    Room ..> DisplayHelper : uses
    Map ..> DisplayHelper : uses
    Renderer ..> Color : uses
    Renderer ..> Position : uses
    Renderer ..> Rectangle : uses
    Chest ..> Key : uses
    Chest ..> Hammer : uses
